# semikron_mes_web

./: .gitignore  liuwei.json  pyproject.toml
mes_web/: app.py
mes_web/blueprints/: database.py  dbc_link.py  index.py  lot.py  point.py  recipe.py
mes_web/templates/: cyg_base.html  cyg_current_lot.html  cyg_dbc_link_list.html  cyg_lot_list.html  cyg_point_list.html  cyg_recipe_list.html
mes_web/utils/: socket_common.py
