[tool.poetry]
name = "mes-web"
version = "0.1.0"
description = ""
authors = ["LiuWei <183074632@qq.com>"]
readme = "README.md"
packages = [{include = "mes_web"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
mysql-api = "^0.1.0"
mysql-table-model = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
